Tweaking z-index for CSS issue with bootsrap carousel

--- a/base-project/src/main/webapp/bootstrap/css/bootstrap.css
+++ b/base-project/src/main/webapp/bootstrap/css/bootstrap.css
@@ -5105,7 +5105,7 @@ button.close {
   position: absolute;
   bottom: 10px;
   left: 50%;
-  z-index: 15;
+  z-index: 2;
   width: 60%;
   padding-left: 0;
   margin-left: -30%;
